tests/lean/parser1.lean



(*

foo(10)

*)

print "checkpoint"

(*

parse_lean_cmds("(" .. "*" .. [[

        foo(20)

]] .. "*" .. ")")

*)